<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cn.yblog.widget.TopBar
        android:id="@+id/login_inner_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/word_login"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_username"
        style="@style/OutLinedBoxStyle"
        android:hint="@string/word_username"
        app:layout_constraintTop_toBottomOf="@id/login_inner_top_bar"
        app:startIconDrawable="@drawable/ic_person_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        style="@style/OutLinedBoxStyle"
        android:hint="@string/word_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/login_til_username"
        app:startIconDrawable="@drawable/ic_lock_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn_login"
        style="@style/OutLinedButtonStyle"
        android:text="@string/word_login"
        app:layout_constraintTop_toBottomOf="@id/login_til_password" />

    <Button
        android:id="@+id/login_btn_register"
        style="@style/TextButtonStyle"
        android:text="@string/word_register"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>